# sales/sales-app/src/main/java/io/openinnovationlabs/sales/adapters/http/OpportunityHttpAdapter.java
@@ -3,8 +3,11 @@ package io.openinnovationlabs.sales.adapters.http;
 import io.openinnovationlabs.ddd.Command;
 import io.openinnovationlabs.ddd.DomainModel;
 import io.openinnovationlabs.ddd.DomainModelException;
+import io.openinnovationlabs.sales.adapters.Translator;
 import io.openinnovationlabs.sales.domain.opportunity.CreateOpportunity;
-import io.openinnovationlabs.sales.domain.opportunity.OpportunityId;
+import io.openinnovationlabs.sales.dto.CommandDTO;
+import io.openinnovationlabs.sales.dto.CommandProcessingResponseDTO;
+import io.openinnovationlabs.sales.dto.CreateOpportunityCommandDTO;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -18,7 +21,7 @@ import java.net.URI;
 import java.util.UUID;
 
 
-@Path("/")
+@Path("/v1")
 @Component
 public class OpportunityHttpAdapter {
 
@@ -28,19 +31,21 @@ public class OpportunityHttpAdapter {
     @Autowired
     private DomainModel domainModel;
 
+    private Translator translator = new Translator();
+
 
     @POST
     @Path("/opportunities")
     @Produces("application/json")
     @Consumes("application/json")
-    public void createOpportunity(OpportunityDTO opportunityDTO,
+    public void createOpportunity(CreateOpportunityCommandDTO createOpportunityCommandDTO,
                                   @Suspended final AsyncResponse asyncResponse) {
 
-        CreateOpportunity createOpportunity = opportunityDTO.to(UUID.randomUUID().toString());
+        CreateOpportunity createOpportunity = translator.to(createOpportunityCommandDTO, UUID.randomUUID().toString());
         domainModel.issueCommand(createOpportunity).setHandler(ar -> {
             if (ar.succeeded()) {
-                asyncResponse.resume(Response.created(URI.create(createOpportunity.aggregateIdentity().id)).entity(ar.result())
-                        .build());
+                CommandProcessingResponseDTO dto = translator.to(ar.result());
+                asyncResponse.resume(Response.created(URI.create(createOpportunity.aggregateIdentity().id)).entity(dto).build());
             } else if (ar.cause().getCause() instanceof DomainModelException) {
                 asyncResponse.resume(Response.status(Response.Status.BAD_REQUEST).entity(ar.cause().toString()).build());
             } else {
@@ -54,19 +59,18 @@ public class OpportunityHttpAdapter {
     @Path("/opportunities/{id}")
     @Produces("application/json")
     @Consumes("application/json")
-    public void executeCommand(Command command,
+    public void executeCommand(CommandDTO commandDTO,
                                @PathParam("id") String id,
                                @Suspended final AsyncResponse asyncResponse) {
 
-        LOGGER.info(id);
+
+        Command command = translator.to(commandDTO, id);
         domainModel.issueCommand(command).setHandler(ar -> {
             if (ar.succeeded()) {
                 asyncResponse.resume(Response.ok(ar.result()).build());
             } else if (ar.cause() instanceof DomainModelException) {
-                LOGGER.info(ar.cause().getClass().getName() + "1");
                 asyncResponse.resume(Response.status(Response.Status.BAD_REQUEST).entity(ar.cause().toString()).build());
             } else {
-                LOGGER.info(ar.cause().getClass().getName() + "2");
                 asyncResponse.resume(Response.serverError().build());
             }
         });
